c/src/test/resources/c/nec_inline_bnc/valid/ex21-100.ctrl
<controlFile>
  <sourceFile name="../ex21.c" id="1" />
  <run>
    <startPosition fileId="1" line="10" />
    <wayPoint fileId="1" line="12" >
      <loop iterTimes="100" />
    </wayPoint>
    <wayPoint fileId="1" line="18" >
      <loop iterTimes="100" />
    </wayPoint>
    <endPosition fileId="1" line="25" />
  </run>
</controlFile>