c/src/test/resources/c/nec_inline_bnc/invalid/ex26-200.ctrl
<controlFile>
  <sourceFile name="../ex26.c" id="1" />
  <run>
    <startPosition fileId="1" line="14" />
    <wayPoint fileId="1" line="16" >
      <loop iterTimes="100" >
        <wayPoint fileId="1" line="17" >
          <function funcName="g" >
            <wayPoint fileId="1" line="8" />
          </function>
        </wayPoint>
        <wayPoint fileId="1" line="18" >
          <function funcName="g" >
            <wayPoint fileId="1" line="10" />
          </function>
        </wayPoint>
      </loop>
    </wayPoint>
    <wayPoint fileId="1" line="22" >
      <loop iterTimes="100" />
    </wayPoint>
    <endPosition fileId="1" line="28" />
  </run>
</controlFile>